v1.0.12
-------
Aug 8, 2010
- installer supports several kernel versions
- build next3 as a stand-alone kernel module
- support 16TB volume snapshots
- snapshot image starts at offset 0 of snapshot file
- snapshot image is ext3 (has_journal)
- fix segmentation fault at the end of mkfs.ext3
- add next3 features when executing mkfs.next3
- fix compilation warnings on 64bit kernel build
- e2fsck -x deletes all snapshots
- fix exclude bitmap errors after online resize
- alternative snapshot flags with lssnap/chsnap

v1.0.11
-------
Jun 14, 2010
- finalized on-disk format
- migrate old format to new format on e2fsck, tune2fs and resize2fs
- migrate old format to new format on mount time
- check snapshot list on fsck
- fix snapshot merge bug

v1.0.10
-------
May 20, 2010
- replace mke2fs/tune2fs option -O big_journal with -J big
- fix snapshot shrink bug
- record errors messages in journal super block
- clear excluded blocks from COW bitmap
- support disk quotas (not journaled)

v1.0.9
------
Apr 15, 2010
- first public release of next3
- next3 wiki [http://sourceforge.net/apps/mediawiki/next3]
- free snapshot blocks when discarding snapshots (tune2fs -O ^has_snapshot)
- cleanup after reboot in the middle of snapshot take
- disable unsupported features: disk quota, data journaling, block size != 4K
- handle partial page write and partial page truncate correctly
- fsck of exclude bitmap

v1.0.8
------
Feb 21, 2010
Bug fixes:
- incorrect cached data in new snapshot (fix COW-read race)
- unused blocks moved to snapshot (fix test COW bitmap blocks count)
- used blocks freed from snapshot (fix shrink blocks count)
Performance:
- fast read of data in new snapshot (copy from cache on COW-read race)
Stability:
- atomic move-on-write hook
- code review by Erez Zadok [http://www.cs.sunysb.edu/~ezk]
Sanity tests:
- clean fsck of snapshot image
- trigger f/s error on exclude bitmap in-consistencies
- trigger f/s error if snapshot load fails