@@ -18,25 +18,30 @@
     </TABLE> 
     <!-- end top title table --> 
  
-    <P>This is the home page for the Next3™ filesystem. Next3 is a clone of the Ext3 filesystem
+    <P>This is the home page for the Next3(TM) filesystem. Next3 is a clone of the Ext3 filesystem
     with built-in support for snapshots. Next3 was developed by <A HREF="http://www.ctera.com">CTERA Networks</A></P> 
  
     <P>The Next3 Sourceforge summary page can be found <A HREF="http://sourceforge.net/projects/next3">here</A>.</P>
  
     <P>Documentation and other resources can be found <A HREF="http://sourceforge.net/apps/mediawiki/next3">here</A>.</P>    
  
-    <H2>Release 1.0.11 of Next3 is available!</H2> 
+    <H2>Release 1.0.12 of Next3 is available!</H2> 
  
-    <H4>Next3 on-disk format has been finalized and approved by <A HREF="http://thunk.org/tytso">Theodore Ts'o</A>.</H4>
-    
-    <P>Existing installations will be automatically migrated to new on-disk format.<br>
-    The release can be downloaded from <A HREF="http://prdownloads.sourceforge.net/next3/next3-1.0.11-1.tar.gz">here</A>.</P> 
- 
+    <H4>Featuring a new Makefile that builds a stand-alone kernel module,
+        installs pre-compiled (x86) next3 utils and runs next3 snapshot tests on a loop mounted image.</H4>
+     <H4>Successfuly tested on Ubuntu desktop releases 9.10 and 10.4 and with stable kernel versions 2.6.27 to 2.6.33.</H4>
+      
+    <P>The package can be downloaded from <A HREF="http://prdownloads.sourceforge.net/next3/next3-1.0.12.tar.gz">here</A></P>    
+     
+    <P>Install instructions can be found <A HREF="http://sourceforge.net/apps/mediawiki/next3/index.php?title=Getting_started#Install_next3">here</A></P>
+     
+    <P>Release notes can be found <A HREF="http://next3.sourceforge.net/files/1.0.12/Release-notes.txt">here</A></P>    
+     
     <P>Visit Next3 page on <A HREF="http://www.ctera.com/next3">CTERA website</A> to learn more about Next3 snapshots and Cloud Attached Storage.</P> 
  
     <hr> 
     <a href="http://sourceforge.net"><img src="http://sflogo.sourceforge.net/sflogo.php?group_id=2406&amp;type=2" width="125" height="37" border="0" alt="SourceForge.net Logo" /></a> 
 <p> 
-<!-- hhmts start -->Last modified: Wed Jun 14 10:14:42 IDT 2010 <!-- hhmts end --> 
+<!-- hhmts start -->Last modified: Mon Aug 9 17:14:42 IDT 2010 <!-- hhmts end --> 
   </body> 
 </html> 
